move to java records