@@ -1,31 +1,46 @@
 package com.jw.holidayguard.exception;
 
-import com.jw.holidayguard.controller.ErrorResponse;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.ProblemDetail;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+
+import java.net.URI;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationError(MethodArgumentNotValidException ex) {
-        String message = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
-        ErrorResponse error = ErrorResponse.of("VALIDATION_ERROR", message);
-        return ResponseEntity.badRequest().body(error);
+    public ProblemDetail handleValidationError(MethodArgumentNotValidException ex) {
+        String message = ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, message);
+        problem.setType(URI.create("https://holidayguard.example.com/errors/validation-error"));
+        problem.setTitle("Validation Error");
+        return problem;
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<ErrorResponse> handleIllegalArgument(IllegalArgumentException ex) {
-        ErrorResponse error = ErrorResponse.of("INVALID_REQUEST", ex.getMessage());
-        return ResponseEntity.badRequest().body(error);
+    public ProblemDetail handleIllegalArgument(IllegalArgumentException ex) {
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.BAD_REQUEST, ex.getMessage());
+        problem.setType(URI.create("https://holidayguard.example.com/errors/invalid-request"));
+        problem.setTitle("Invalid Request");
+        return problem;
     }
 
     @ExceptionHandler(IllegalStateException.class)
-    public ResponseEntity<ErrorResponse> handleIllegalState(IllegalStateException ex) {
-        ErrorResponse error = ErrorResponse.of("INVALID_STATE", ex.getMessage());
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+    public ProblemDetail handleIllegalState(IllegalStateException ex) {
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.CONFLICT, ex.getMessage());
+        problem.setType(URI.create("https://holidayguard.example.com/errors/invalid-state"));
+        problem.setTitle("Invalid State");
+        return problem;
+    }
+
+    @ExceptionHandler(MissingRuleException.class)
+    public ProblemDetail handleMissingRule(MissingRuleException ex) {
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+        problem.setType(URI.create("https://holidayguard.example.com/errors/missing-rule"));
+        problem.setTitle("Missing Rule");
+        return problem;
     }
 }
